--- a/internal/translations/locales/fr-CA/out.gotext.json
+++ b/internal/translations/locales/fr-CA/out.gotext.json
@@ -177,7 +177,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.DisableMaybe == 1, loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
+                    "expr": "iif(event.DisableMaybe(), loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
                 }
             ]
         },
@@ -202,7 +202,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.AllowShare == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.SharingAllowed(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -227,7 +227,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.Suitwalk == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.Suitwalk(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -341,6 +341,11 @@
             ]
         },
         {
+            "id": "Event not found",
+            "message": "Event not found",
+            "translation": "Événement manquant"
+        },
+        {
             "id": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "message": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "translation": "Très bien, j'ai créé l'évènement ! Vous pouvez maintenant y ajouter du contenu, ou le partager dans un autre échange."
@@ -427,11 +432,6 @@
             "id": "A list of all your events, old and new",
             "message": "A list of all your events, old and new",
             "translation": "Liste de tous vos événements, anciens et récents"
-        },
-        {
-            "id": "Event not found",
-            "message": "Event not found",
-            "translation": "Événement manquant"
         },
         {
             "id": "Name:",
@@ -844,7 +844,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "event.Name"
+                    "expr": "event.Name()"
                 }
             ]
         }
