--- a/internal/translations/locales/en-US/out.gotext.json
+++ b/internal/translations/locales/en-US/out.gotext.json
@@ -86,6 +86,55 @@
             "fuzzy": true
         },
         {
+            "id": "Sunday",
+            "message": "Sunday",
+            "translation": "Sunday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Monday",
+            "message": "Monday",
+            "translation": "Monday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Tuesday",
+            "message": "Tuesday",
+            "translation": "Tuesday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Wednesday",
+            "message": "Wednesday",
+            "translation": "Wednesday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Thursday",
+            "message": "Thursday",
+            "translation": "Thursday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Friday",
+            "message": "Friday",
+            "translation": "Friday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
+            "id": "Saturday",
+            "message": "Saturday",
+            "translation": "Saturday",
+            "translatorComment": "Copied from source.",
+            "fuzzy": true
+        },
+        {
             "id": "Su",
             "message": "Su",
             "translation": "Su",
