--- a/internal/translations/locales/de-DE/messages.gotext.json
+++ b/internal/translations/locales/de-DE/messages.gotext.json
@@ -62,6 +62,41 @@
             "translation": "Dezember"
         },
         {
+            "id": "Sunday",
+            "message": "Sunday",
+            "translation": "Sonntag"
+        },
+        {
+            "id": "Monday",
+            "message": "Monday",
+            "translation": "Montag"
+        },
+        {
+            "id": "Tuesday",
+            "message": "Tuesday",
+            "translation": "Dienstag"
+        },
+        {
+            "id": "Wednesday",
+            "message": "Wednesday",
+            "translation": "Mittwoch"
+        },
+        {
+            "id": "Thursday",
+            "message": "Thursday",
+            "translation": "Donnerstag"
+        },
+        {
+            "id": "Friday",
+            "message": "Friday",
+            "translation": "Freitag"
+        },
+        {
+            "id": "Saturday",
+            "message": "Saturday",
+            "translation": "Samstag"
+        },
+        {
             "id": "Su",
             "message": "Su",
             "translation": "So"
@@ -177,7 +212,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.DisableMaybe == 1, loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
+                    "expr": "iif(event.DisableMaybe(), loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
                 }
             ]
         },
@@ -202,7 +237,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.AllowShare == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.SharingAllowed(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -227,7 +262,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.Suitwalk == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.Suitwalk(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -341,6 +376,11 @@
             ]
         },
         {
+            "id": "Event not found",
+            "message": "Event not found",
+            "translation": "Veranstaltung nicht gefunden"
+        },
+        {
             "id": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "message": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "translation": "Okay, ich habe deine Veranstaltung erstellt! Du kannst jetzt zusätzliche Informationen angeben oder es in einem anderen Chat teilen."
@@ -427,11 +467,6 @@
             "id": "A list of all your events, old and new",
             "message": "A list of all your events, old and new",
             "translation": "Eine Liste all deiner Veranstaltungen, alt wie neu"
-        },
-        {
-            "id": "Event not found",
-            "message": "Event not found",
-            "translation": "Veranstaltung nicht gefunden"
         },
         {
             "id": "Name:",
@@ -806,7 +841,7 @@
         {
             "id": "The Furry Plans bot was created by 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com)\n\nTranslations provided by:",
             "message": "The Furry Plans bot was created by 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com)\n\nTranslations provided by:",
-            "translation": "Der Furry Plans-Bot wurde von \uD83D\uDC15\u200D\uD83E\uDDBA<b>Av</b> (www.avbrand.com) erstellt.\n\nÜbersetzungen bereitgestellt von:"
+            "translation": "Der Furry Plans-Bot wurde von 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com) erstellt.\n\nÜbersetzungen bereitgestellt von:"
         },
         {
             "id": "This project is open source! Learn more at: github.com/avwuff/furryplansbot",
@@ -831,7 +866,7 @@
         {
             "id": "The Furry Plans Bot provides an iCal feed of all events that you've marked as 'Yes' or 'Maybe'.  \nYou can add this feed to Google Calendar or other calendars, and events will appear automatically! \nTo get the feed URL, chat with @furryplansbot and send the command \u003cb\u003e/feed\u003c/b\u003e.",
             "message": "The Furry Plans Bot provides an iCal feed of all events that you've marked as 'Yes' or 'Maybe'.  \nYou can add this feed to Google Calendar or other calendars, and events will appear automatically! \nTo get the feed URL, chat with @furryplansbot and send the command \u003cb\u003e/feed\u003c/b\u003e.",
-            "translation": "Der Furry Plans Bot bietet einen iCal-Feed aller Ereignisse, die Sie mit „Ja“ oder „Vielleicht“ markiert haben.\nSie können diesen Feed zu Google Kalender oder anderen Kalendern hinzufügen, und Ereignisse werden automatisch angezeigt!\nUm die Feed-URL zu erhalten, chatten Sie mit @furryplansbot und senden Sie den Befehl <b>/feed</b>."
+            "translation": "Der Furry Plans Bot bietet einen iCal-Feed aller Ereignisse, die Sie mit „Ja“ oder „Vielleicht“ markiert haben.\nSie können diesen Feed zu Google Kalender oder anderen Kalendern hinzufügen, und Ereignisse werden automatisch angezeigt!\nUm die Feed-URL zu erhalten, chatten Sie mit @furryplansbot und senden Sie den Befehl \u003cb\u003e/feed\u003c/b\u003e."
         },
         {
             "id": "Add '{Name}' to your Calendar",
@@ -844,7 +879,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "event.Name"
+                    "expr": "event.Name()"
                 }
             ]
         }
