--- a/internal/translations/locales/fr-CA/messages.gotext.json
+++ b/internal/translations/locales/fr-CA/messages.gotext.json
@@ -62,6 +62,41 @@
             "translation": "Décembre"
         },
         {
+            "id": "Sunday",
+            "message": "Sunday",
+            "translation": "Dimanche"
+        },
+        {
+            "id": "Monday",
+            "message": "Monday",
+            "translation": "Lundi"
+        },
+        {
+            "id": "Tuesday",
+            "message": "Tuesday",
+            "translation": "Mardi"
+        },
+        {
+            "id": "Wednesday",
+            "message": "Wednesday",
+            "translation": "Mercredi"
+        },
+        {
+            "id": "Thursday",
+            "message": "Thursday",
+            "translation": "Jeudi"
+        },
+        {
+            "id": "Friday",
+            "message": "Friday",
+            "translation": "Vendredi"
+        },
+        {
+            "id": "Saturday",
+            "message": "Saturday",
+            "translation": "Samedi"
+        },
+        {
             "id": "Su",
             "message": "Su",
             "translation": "Dim"
@@ -177,7 +212,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.DisableMaybe == 1, loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
+                    "expr": "iif(event.DisableMaybe(), loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
                 }
             ]
         },
@@ -202,7 +237,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.AllowShare == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.SharingAllowed(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -227,7 +262,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "iif(event.Suitwalk == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                    "expr": "iif(event.Suitwalk(), loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
                 }
             ]
         },
@@ -341,6 +376,11 @@
             ]
         },
         {
+            "id": "Event not found",
+            "message": "Event not found",
+            "translation": "Événement manquant"
+        },
+        {
             "id": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "message": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
             "translation": "Très bien, j'ai créé l'évènement ! Vous pouvez maintenant y ajouter du contenu, ou le partager dans un autre échange."
@@ -427,11 +467,6 @@
             "id": "A list of all your events, old and new",
             "message": "A list of all your events, old and new",
             "translation": "Liste de tous vos événements, anciens et récents"
-        },
-        {
-            "id": "Event not found",
-            "message": "Event not found",
-            "translation": "Événement manquant"
         },
         {
             "id": "Name:",
@@ -806,7 +841,7 @@
         {
             "id": "The Furry Plans bot was created by 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com)\n\nTranslations provided by:",
             "message": "The Furry Plans bot was created by 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com)\n\nTranslations provided by:",
-            "translation": "Le robot Furry Plans a été créé par \uD83D\uDC15\u200D\uD83E\uDDBA<b>Av</b> (www.avbrand.com)\n\nTraductions fournies par:"
+            "translation": "Le robot Furry Plans a été créé par 🐕‍🦺\u003cb\u003eAv\u003c/b\u003e (www.avbrand.com)\n\nTraductions fournies par:"
         },
         {
             "id": "This project is open source! Learn more at: github.com/avwuff/furryplansbot",
@@ -831,7 +866,7 @@
         {
             "id": "The Furry Plans Bot provides an iCal feed of all events that you've marked as 'Yes' or 'Maybe'.  \nYou can add this feed to Google Calendar or other calendars, and events will appear automatically! \nTo get the feed URL, chat with @furryplansbot and send the command \u003cb\u003e/feed\u003c/b\u003e.",
             "message": "The Furry Plans Bot provides an iCal feed of all events that you've marked as 'Yes' or 'Maybe'.  \nYou can add this feed to Google Calendar or other calendars, and events will appear automatically! \nTo get the feed URL, chat with @furryplansbot and send the command \u003cb\u003e/feed\u003c/b\u003e.",
-            "translation": "Le bot Furry Plans fournit un flux iCal de tous les événements que vous avez marqués comme \"Oui\" ou \"Peut-être\".\nVous pouvez ajouter ce flux à Google Agenda ou à d'autres agendas, et les événements apparaîtront automatiquement !\nPour obtenir l'URL du flux, discutez avec @furryplansbot et envoyez la commande <b>/feed</b>."
+            "translation": "Le bot Furry Plans fournit un flux iCal de tous les événements que vous avez marqués comme \"Oui\" ou \"Peut-être\".\nVous pouvez ajouter ce flux à Google Agenda ou à d'autres agendas, et les événements apparaîtront automatiquement !\nPour obtenir l'URL du flux, discutez avec @furryplansbot et envoyez la commande \u003cb\u003e/feed\u003c/b\u003e."
         },
         {
             "id": "Add '{Name}' to your Calendar",
@@ -844,7 +879,7 @@
                     "type": "string",
                     "underlyingType": "string",
                     "argNum": 1,
-                    "expr": "event.Name"
+                    "expr": "event.Name()"
                 }
             ]
         }
